bot under development

--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./website/styles.css">
     <script src="./website/pieces.js"></script>
+    <script src="./website/bot.js"></script>
     <script src="./website/board.js" defer></script>
 </head>
 
